--- a/src/pug/content/workflow-list.pug
+++ b/src/pug/content/workflow-list.pug
@@ -1,36 +1,36 @@
 -
   const workflowList = [
     {
-      icon: 'workflow-icon-1.svg',
+      icon: 'workflow-1',
       title: 'Предварительно оцениваем',
       text: 'Оцениваем проект вилкой, определяем сложность и предлагаем варианты реализации.'
     },
 
     {
-      icon: 'workflow-icon-2.svg',
+      icon: 'workflow-2',
       title: 'Согласовываем нюансы',
       text: 'Внимательно изучаем проект, задаем вопросы, составляем план работ.',
     },
 
     {
-      icon: 'workflow-icon-3.svg',
+      icon: 'workflow-3',
       title: 'Запускаем проект в работу',
       text: 'Договор согласован и подписан, поэтому мы начинаем работу. При необходимости создаём чат для оперативного общения между клиентом и командой разработки.',
     },
 
     {
-      icon: 'workflow-icon-4.svg',
+      icon: 'workflow-4',
       title: 'Работаем над проектом',
       text: 'Работаем в согласованном процессе, показываем промежуточный результат, тестируем, задаём вопросы.',
     },
 
     {
-      icon: 'workflow-icon-5.svg',
+      icon: 'workflow-5',
       title: 'Тестируем',
       text: 'Перед сдачей, делаем финальное тестирование и отдаём.',
     },
     {
-      icon: 'workflow-icon-6.svg',
+      icon: 'workflow-6',
       title: 'Сопровождаем после сдачи',
       text: 'Остаёмся на связи по проекту до запуска и даём гарантию на 60 дней после.',
     },
