--- a/src/pug/components/cards/info-card/_info-card.scss
+++ b/src/pug/components/cards/info-card/_info-card.scss
@@ -32,6 +32,10 @@ $border-radius: 10px;
 
   svg {
     fill: var(--primary);
+    height: 50px;
+    width: 50px;
+    min-height: 50px;
+    aspect-ratio: 1 / 1;
   }
 
   &-title {
@@ -43,7 +47,8 @@ $border-radius: 10px;
     font-family: var(--secondary-font);
     font-size: 16px;
     font-weight: var(--fw-l);
-    margin-top: auto;
+
+    // margin-top: auto;
 
     & + small {
       display: inline-block;
