--- a/src/pug/components/footer/_footer.scss
+++ b/src/pug/components/footer/_footer.scss
@@ -3,22 +3,26 @@
   font-size: 14px;
   font-weight: var(--fw-l);
 
-  &__row {
-    @extend %flex-column;
-
+  &__top {
+    display: grid;
+    grid-template-columns: 1fr;
     gap: var(--gap-xxl);
     padding: var(--gap-l) 0;
 
     @include media-up($tablet-width) {
-      flex-direction: row;
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @include media-up(1319px) {
+      grid-template-columns: minmax(280px, 20%) auto 300px;
+      grid-gap: clamp(var(--gap-lg), 5vw, var(--gap-xxxl));
     }
   }
 
-  &__col {
+  &__side {
     @extend %flex-column;
 
     gap: var(--gap-xl);
-    flex-basis: calc(100% / 3);
   }
 
   &__nav {
@@ -27,12 +31,22 @@
 
     &-list {
       @extend %list-reset;
-      @extend %flex-column;
+      @extend %flex-wrap;
 
       gap: var(--gap-xs);
-      margin-top: calc(-1 * var(--gap-xs));
+      max-width: 500px;
+
+      @include media-up($tablet-width) {
+        margin: 0 auto;
+      }
 
       li {
+        width: 100%;
+
+        @include media-up(1319px) {
+          width: calc(50% - var(--gap-xs));
+        }
+
         a {
           display: flex;
           font-size: 16px;
@@ -45,20 +59,27 @@
   &__contacts {
     @extend %flex-column;
 
+    padding-top: 8px;
     gap: var(--gap-l);
 
-    @include media-up($tablet-width) {
-      margin-left: auto;
-    }
+    // @include media-up($laptop-lg-width) {
+    //   margin-left: 0;
+    // }
 
     .company-worktime {
       flex-direction: column;
       align-items: flex-start;
       gap: var(--gap-s);
+      font-size: 14px;
+
+      @include media-up($tablet-lg-width) {
+        font-size: 16px;
+      }
     }
   }
 
   &__bottom {
+    padding: var(--gap-l) 0;
     border-top: 1px solid var(--primary);
   }
 }
