--- a/src/pug/components/nav/_nav.scss
+++ b/src/pug/components/nav/_nav.scss
@@ -61,10 +61,10 @@ $mobile-view-width: 1180px;
       right: 0;
       display: flex;
       flex-direction: column;
-      width: fit-content;
+      width: 90dvw;
       height: 100%;
       min-height: 100dvh;
-      min-width: 50dvw;
+      max-width: 700px;
       background-color: var(--dark);
       overflow-y: auto;
       padding: 100px clamp(24px, 5vw, 40px) clamp(24px, 5vw, 40px);
