--- a/src/pug/components/sliders/main-slider/main-slider.pug
+++ b/src/pug/components/sliders/main-slider/main-slider.pug
@@ -19,10 +19,10 @@ mixin main-slider(data)
         .swiper-navigation
           .swiper-button-prev
             svg(width="16" height="16")
-              use(xlink:href="../assets/svg-sprite.svg#icon-slider-prev-arrow")
+              use(xlink:href="./assets/svg-sprite.svg#icon-slider-prev-arrow")
           .swiper-button-next
             svg(width="16" height="16")
-              use(xlink:href="../assets/svg-sprite.svg#icon-slider-next-arrow")
+              use(xlink:href="./assets/svg-sprite.svg#icon-slider-next-arrow")
 
 
 
