--- a/src/pug/components/footer/footer.pug
+++ b/src/pug/components/footer/footer.pug
@@ -11,25 +11,19 @@ footer.footer
         +social({
           list: [
             {
+              href: 'tel:+79062723744',
+              name: 'Телефон',
+              icon: 'social-phone',
+            },
+            {
               href: 'mailto:info@littleweb.ru',
               name: 'mail',
-              icon: 'icon-mail.svg',
-              iconW: 24,
-              iconH: 24
+              icon: 'social-mail',
             },
             {
               href: 'https://telegram.me/+79062723744',
               name: 'telegram',
-              icon: 'icon-tg.svg',
-              iconW: 24,
-              iconH: 24
-            },
-            {
-              href: 'https://wa.me/79062723744',
-              name: 'whatsapp',
-              icon: 'icon-whatsapp.svg',
-              iconW: 24,
-              iconH: 24
+              icon: 'social-tg',
             },
           ]
         })
