--- a/src/pug/modals/callback-modal.pug
+++ b/src/pug/modals/callback-modal.pug
@@ -4,7 +4,7 @@ block variables
   - modalId = "callback"
 
 block modalContent
-  span.modal-title Заполните форму и&nbsp;мы обязательно свяжемся с&nbsp;Вами
+  span.modal-title Заполните форму и мы обязательно свяжемся с Вами
 
   include ../components/forms/callback-form/callback-form
 
