--- a/src/pug/components/social/_social.scss
+++ b/src/pug/components/social/_social.scss
@@ -8,6 +8,10 @@
     li {
       a {
         @extend %flex-centered-content;
+
+        svg {
+          fill: var(--primary);
+        }
       }
     }
   }
