--- a/src/styles/variables/root/_colors.scss
+++ b/src/styles/variables/root/_colors.scss
@@ -1,7 +1,7 @@
 :root {
   --white: #fff;
   --black: #000;
-  --primary: #7899d4;
+  --primary: #7899d4; // #5f9ea0
   --secondary: #fffce1;
 
   // --success: #28a745;
