add service templates, add contacts

--- a/src/pug/components/header/header.pug
+++ b/src/pug/components/header/header.pug
@@ -40,17 +40,13 @@ header.header
             text: 'Услуги'
           },
           {
-            href: 'cases.html',
-            text: 'Кейсы'
-          },
-          {
-            href: 'brief.html',
-            text: 'Бриф'
-          },
-          {
             href: 'faq.html',
-            text: 'FAQ'
-          }
+            text: 'Задать вопрос'
+          },
+          {
+            href: 'contacts.html',
+            text: 'Контакты'
+          },
         ]
       })
 
