--- a/src/pug/content/about-list.pug
+++ b/src/pug/content/about-list.pug
@@ -7,40 +7,39 @@
 
     {
       title: 'Лендинг',
-      text: 'Одностраничный сайт описывающий Вашу деятельность или услугу. Больше фото, много информации о компании, разделы с товарами и услугами, формы заказа и обратной связи.',
+      text: 'Одностраничный сайт описывающий Вашу деятельность или услугу. Больше фото, много информации о компании, разделы с товарами и услугами, формы обратной связи.',
     },
 
     {
       title: 'Корпоративный сайт',
-      text: 'Многостраничный сайт с возможностью заказа товара или услуги через форму заказа. Подойдет компаниям, которым нужен полноценный сайт, с самостоятельными разделами.',
+      text: 'Многостраничный сайт с возможностью заказа товара или услуги через форму обратной связи. Подойдет компаниям, которым нужен сайт, описывающий их сферу деятельности, с полноценными разделами и большим количеством информации.',
       note: '*Не является интернет-магазином.'
     },
 
     {
       title: 'Интернет-магазин',
-      text: 'Многостраничный сайт с возможностью покупки товара. Корзина, сравнение и отложенные товары, личный кабинет.Все то, что должно быть в современном интернет-магазине и к чему привыкли пользователи.',
+      text: 'Все то, что должно быть в современном интернет-магазине и то, к чему привыкли пользователи. Корзина, сравнение, отложенные товары, личный кабинет, все необходимые для Вашего бизнеса интеграции.',
     },
 
     {
       title: 'SPA и WEB-приложения',
-      text: 'Много интерактива, программного кода и взаимодействия с пользователем ? Тогда Вам отлично подойдет разработка Web-приожения! Разрабатываем с помощью современных фреймворком, таких как Vue и React.',
+      text: 'Много интерактива, программного кода и взаимодействия с пользователем ? Тогда Вам отлично подойдет разработка Web-приложения! Разрабатываем с помощью современных фреймворком, таких как Vue и React.',
     },
 
     {
       title: 'СЕО-оптимизация сайта',
-      text: 'Выводим Ваш сайт в топ выдачи Яндекс и Google. Настраиваем контекстную рекламу. Трафик растет - заказов становится больше.',
+      text: 'Выводим Ваш сайт в топ выдачи Яндекс и Google. Проведем комплексную оптимизацию, увеличим видимость, повысим трафик. Как итог — сайт поднимется в выдаче поисковых систем и привлечет больше целевых посетителей.',
       note: '*Подойдет для многостраничных сайтов.'
     },
 
-    {
-      title: 'Аутсорс',
-      text: 'У вас есть проект в разработке, но не хватает рук ? Мы готовы оперативно подключиться и взять на себя часть задач.',
-    },
+    //- {
+    //-   title: 'Аутсорс',
+    //-   text: 'У вас есть проект в разработке, но не хватает рук ? Мы готовы оперативно подключиться и взять на себя часть задач.',
+    //- },
 
     {
       title: 'Техническая поддержка',
-      text: 'У вас уже есть сайт, но не кому поддерживать его в хорошем состоянии или он просто устарел и Вы хотели бы его обновить ? Отдайте его нам ! Мы сделаем аудит, определим слабые места, составим список и план работ.',
+      text: 'У вас уже есть сайт, но не кому поддерживать его в хорошем состоянии ? Обращайтесь к нам ! Мы сделаем аудит, определим слабые места, составим список и план работ.',
     },
-
-
   ]
+
