--- a/src/pug/content/feature-list.pug
+++ b/src/pug/content/feature-list.pug
@@ -4,21 +4,21 @@
       icon: 'feature-1',
       title: 'Быстро запускаем проекты в работу',
       modifier: 'vertical',
-      text: 'Оперативно оценим проект, заключим договор, подпишем NDA при необходимости.'
+      text: 'Оперативно оценим проект, в короткие сроки заключим договор, подберем команду исполнителей и запустим проект в работу.'
     },
 
     {
       icon: 'feature-2',
       title: 'Индивидуальный подход к каждому',
       modifier: 'vertical',
-      text: 'Мы с радостью разработаем уникальный дизайн сайта, который отобразит вашу уникальность и удовлетворит все ваши пожелания.',
+      text: 'Погружаемся в процессы, обсуждаем все нюансы и согласовываем план действий, направленный на специфику Вашей деятельности.',
     },
 
     {
       icon: 'feature-3',
-      title: 'Честность по отношению к себе и клиенту',
+      title: 'Делаем весь процесс прозрачным и понятным',
       modifier: 'vertical',
-      text: 'Искренность в каждом действии - ключ к успешным взаимоотношениям с клиентом, продуктивно влияющим на наш бизнес.',
+      text: 'Рассказываем обо всех нюансах и сложностях понятным языком.',
     },
 
     {
