--- a/src/pug/content/question-list.pug
+++ b/src/pug/content/question-list.pug
@@ -2,17 +2,17 @@
   const questionList = [
     {
       question: 'Сколько времени занимает разработка сайта?',
-      answer: 'По разному. Все зависит от сложности проекта и количества необходимых Вашему бизнесу решений и интеграций.'
+      answer: 'Длительность зависит от сложности проекта, объема работ и количества необходимых Вашему бизнесу решений и интеграций.'
     },
 
     {
       question: 'Каковы ваши тарифы и стоимость разработки сайта?',
-      answer: 'Минимальная стоимость наших услуг стартует от 10 000 рублей. Подробнее с ценами и услугами Вы можете ознакомиться <a href="/prices.html">здесь</a>, либо связаться с нами, любым удобным для Вас способом.'
+      answer: 'Минимальная стоимость наших услуг стартует от 10 000 рублей. Подробнее с ценами и услугами Вы можете ознакомиться <a href="/prices.html">здесь</a>, либо связаться с нами, любым удобным для Вас способом из раздела <a href="/contacts.html">контакты</a>.'
     },
 
     {
       question: 'Предоставляете ли вы услуги по оптимизации, продвижению и тех. поддержке сайта после его запуска?',
-      answer: 'Да. Мы предлагаем полный цикл услуг по СЕО и технической поддержке Вашего сайта после его запуска.'
+      answer: 'Мы предлагаем полный цикл услуг по СЕО и технической поддержке Вашего сайта после его запуска.'
     },
 
   ]
