--- a/src/pug/content/review-list.pug
+++ b/src/pug/content/review-list.pug
@@ -1,34 +1,33 @@
 -
   const reviewList = [
     {
-      text: '‟Во-первых, я хотел бы отметить их профессионализм. Команда агентства дизайнеров обладает глубокими знаниями в области дизайна и пониманием того, как создать эстетически”',
+      text: '‟С LittleWeb мы получили не просто сайт, а настоящий механизм успеха! Их команда полна страсти и преданности делу, каждая деталь сайта была проработана до совершенства. Они слушают ваши желания и превращают их в реальность! Благодарю за великолепную работу!”',
       user: {
-        name: 'Константин Константинов',
-        desc: 'Генеральный директор группы компаний Компания'
+        name: 'Анна Иванова',
+        desc: 'Руководитель отдела маркетинга'
       }
     },
 
     {
-      text: '‟Мало текста”',
+      text: '‟Сотрудничество было чрезвычайно продуктивным. Ребята проявили высокий профессионализм и внимательное отношение к каждой детали проекта. Мы получили сайт, который соответствует всем нашим требованиям, а поддержка после запуска продолжает нас приятно удивлять.”',
       user: {
-        name: 'Константин Константинов',
-        desc: 'Генеральный директор группы компаний Компания'
+        name: 'Елена Козлова',
+        desc: 'Руководитель отдела PR'
       }
     },
 
     {
-      text: '‟Во-первых, я хотел бы отметить их профессионализм. Команда агентства дизайнеров обладает глубокими знаниями в области дизайна и пониманием того, как создать эстетически Во-первых, я хотел бы отметить их профессионализм. Команда агентства дизайнеров обладает глубокими знаниями в области дизайна и пониманием того, как создать эстетически Во-первых, я хотел бы отметить их профессионализм. Команда агентства дизайнеров обладает глубокими знаниями в области дизайна и пониманием того, как создать эстетически”',
+      text: '‟LittleWeb — это профессиональный подход на каждом этапе сотрудничества. Они не только создали нам уникальный и функциональный сайт, но и предложили массу идей по его продвижению. Результаты превзошли наши ожидания! Рекомендую всем, кто ищет надежного партнера для онлайн-развития бизнеса.”',
       user: {
-        name: 'Константин Константинов',
-        desc: 'Генеральный директор группы компаний Компания'
+        name: 'Станислав Дмитриев',
+        desc: 'Генеральный директор компаний JoyWork'
       }
     },
 
     {
-      text: '‟Во-первых, я хотел бы отметить их профессионализм. Команда агентства дизайнеров обладает глубокими знаниями в области дизайна и пониманием того, как создать эстетически”',
+      text: '‟В студию обратились по рекомендации и не пожалели. Специалисты внимательно выслушали наши требования, предложили оптимальные решения. Работа была выполнена в срок и с высоким качеством. Мы довольны результатом и будем рекомендовать эту команду своим партнерам”',
       user: {
-        name: 'Константин Константинов',
-        desc: 'Генеральный директор группы компаний Компания'
+        name: 'Алексей Никитин',
       }
     },
 
