--- a/src/pug/content/workflow-list.pug
+++ b/src/pug/content/workflow-list.pug
@@ -2,37 +2,37 @@
   const workflowList = [
     {
       icon: 'workflow-1',
-      title: 'Предварительно оцениваем',
-      text: 'Оцениваем проект вилкой, определяем сложность и предлагаем варианты реализации.'
+      title: 'Предварительная оценка',
+      text: 'Определяем сложность и диапазон стоимости. Предлагаем варианты реализации.'
     },
 
     {
       icon: 'workflow-2',
-      title: 'Согласовываем нюансы',
-      text: 'Внимательно изучаем проект, задаем вопросы, составляем план работ.',
+      title: 'Анализ проекта и согласование деталей',
+      text: 'Изучаем специфику бизнеса, уточняем пожелания клиента, составляем план работ.',
     },
 
     {
       icon: 'workflow-3',
       title: 'Запускаем проект в работу',
-      text: 'Договор согласован и подписан, поэтому мы начинаем работу. При необходимости создаём чат для оперативного общения между клиентом и командой разработки.',
+      text: 'После согласования и подписания договора, начинаем работу. При необходимости создаём чат для общения между клиентом и командой разработки.',
     },
 
     {
       icon: 'workflow-4',
       title: 'Работаем над проектом',
-      text: 'Работаем в согласованном процессе, показываем промежуточный результат, тестируем, задаём вопросы.',
+      text: 'Работы ведутся согласно разработанному ранее плану, предоставляем промежуточные результаты, при необходимости вносим корректировки.',
     },
 
     {
       icon: 'workflow-5',
       title: 'Тестируем',
-      text: 'Перед сдачей, делаем финальное тестирование и отдаём.',
+      text: 'Перед сдачей проекта, делаем финальное тестирование.',
     },
     {
       icon: 'workflow-6',
-      title: 'Сопровождаем после сдачи',
-      text: 'Остаёмся на связи по проекту до запуска и даём гарантию на 60 дней после.',
+      title: 'Сопровождаем',
+      text: 'Не забываем о клиенте после сдачи, обучаем Ваших сотрудников работе с проектом, остаемся на связи и даем гарантию 12 месяцев.',
     },
   ]
 
