--- a/src/pug/sections/index-page/questions.pug
+++ b/src/pug/sections/index-page/questions.pug
@@ -13,6 +13,6 @@ block content
 
   +main-btn({
     class: 'main-btn--outlined base-section__btn',
-    text: 'Оставить отзыв',
+    text: 'Задать вопрос',
     modal: 'callback'
   })
