--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -37,11 +37,6 @@
 @import '../pug/sections/index-page/about';
 @import '../pug/sections/index-page/workflow';
 
-.grid-section-line {
-  width: 1px;
-  height: 100%;
-  background-color: white;
-  position: absolute;
-  top: 0;
-  z-index: -1;
-}
+@import '../pug/sections/services/services-main';
+@import '../pug/sections/services/services-detail';
+@import '../pug/sections/contacts/contacts';
