--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -2,16 +2,15 @@ extends layouts/main-layout.pug
 
 block variables
   -
-    const title = "test_title"
-    const description = "test_description"
-    const keywords = "test_keywords"
+    const title = "littleweb.ru"
+    const description = "Разработка и продвижение сайтов"
+    const keywords = ""
     //- Дополнительные файлы стили для КОНКРЕТНОЙ страницы
-    const styleFileNames = ['inner']
+    //- const styleFileNames = ['inner']
 
 block content
-  //- include ./partials/dev/colors
-  //- include ./partials/dev/typography
-  //- include ./partials/dev/ui
+  include ./sections/contacts/contacts
+  include ./sections/index-page/offer
 
 block modals
   //- Модальные окна используемые ТОЛЬКО на этой странице
