--- a/src/pug/components/header/header.pug
+++ b/src/pug/components/header/header.pug
@@ -37,7 +37,21 @@ header.header
         links: [
           {
             href: 'services.html',
-            text: 'Услуги'
+            text: 'Услуги',
+            inner: [
+              {
+                href: '#',
+                text: 'Услуга 1',
+              },
+              {
+                href: '#',
+                text: 'Услуга 2',
+              },
+              {
+                href: '#',
+                text: 'Услуга 3',
+              },
+            ]
           },
           {
             href: 'faq.html',
