--- a/src/pug/content/about-list.pug
+++ b/src/pug/content/about-list.pug
@@ -3,17 +3,23 @@
     {
       title: 'Сайт-визитка',
       text: 'Небольшой сайт, являющийся Вашей визитной карточкой в сети интернет. Немного информации, фотогалерея, контакты и форма обратной связи.',
+      link: '#',
+      linkText: 'Подробнее'
     },
 
     {
       title: 'Лендинг',
       text: 'Одностраничный сайт описывающий Вашу деятельность или услугу. Больше фото, много информации о компании, разделы с товарами и услугами, формы обратной связи.',
+      link: '#',
+      linkText: 'Подробнее'
     },
 
     {
       title: 'Корпоративный сайт',
       text: 'Многостраничный сайт с возможностью заказа товара или услуги через форму обратной связи. Подойдет компаниям, которым нужен сайт, описывающий их сферу деятельности, с полноценными разделами и большим количеством информации.',
-      note: '*Не является интернет-магазином.'
+      note: '*Не является интернет-магазином.',
+      link: '#',
+      linkText: 'Подробнее'
     },
 
     {
