--- a/src/pug/sections/index-page/about.pug
+++ b/src/pug/sections/index-page/about.pug
@@ -9,7 +9,7 @@ block content
   include ../../content/about-list
   include ../../components/cards/info-card/info-card
 
-  ul.about__list
+  ul.base-list
     each about in aboutList
       li
         +info-card(about)
