--- a/src/pug/sections/index-page/features.pug
+++ b/src/pug/sections/index-page/features.pug
@@ -8,7 +8,7 @@ block content
   include ../../content/feature-list
   include ../../components/cards/info-card/info-card
 
-  ul.features__list
+  ul.base-list
     each feature in featureList
       li
         +info-card(feature)
