--- a/src/pug/sections/index-page/workflow.pug
+++ b/src/pug/sections/index-page/workflow.pug
@@ -9,7 +9,7 @@ block content
   include ../../content/workflow-list
   include ../../components/cards/info-card/info-card
 
-  ul.workflow__list
+  ul.base-list
     each workflow in workflowList
       li
         +info-card(workflow)
