--- a/src/pug/components/cards/info-card/_info-card.scss
+++ b/src/pug/components/cards/info-card/_info-card.scss
@@ -17,11 +17,6 @@ $border-radius: 10px;
 
     gap: var(--gap-s);
     height: 100%;
-
-    a {
-      padding: var(--gap-s) 0;
-      color: var(--primary);
-    }
   }
 
   &-icon {
@@ -38,6 +33,13 @@ $border-radius: 10px;
     aspect-ratio: 1 / 1;
   }
 
+  img {
+    height: 50px;
+    width: 50px;
+    min-height: 50px;
+    aspect-ratio: 1 / 1;
+  }
+
   &-title {
     font-family: var(--primary-font);
     font-size: var(--fs-md);
@@ -47,19 +49,39 @@ $border-radius: 10px;
     font-family: var(--secondary-font);
     font-size: 16px;
     font-weight: var(--fw-l);
-
-    // margin-top: auto;
+    margin-bottom: auto;
 
     & + small {
       display: inline-block;
       font-family: var(--secondary-font);
       font-size: var(--fs-xs);
-      margin-top: auto;
       padding-top: var(--gap-xs);
     }
   }
 
+  .info-card-bottom-link {
+    padding: var(--gap-s) 0;
+    color: var(--primary);
+  }
+
   &--vertical {
     flex-direction: column;
+  }
+
+  &-price {
+    border: 1px solid var(--primary);
+    width: fit-content;
+    padding: 10px calc(var(--gap-l) + 10px);
+    border-radius: 0 20px 20px 0;
+    background-color: var(--primary);
+    color: var(--white);
+    margin-left: calc(-1 * (var(--gap-l) + 10px));
+    box-shadow: 2px 0px 10px rgba(145, 245, 245, 0.5);
+
+    @include media-down($mobile-width) {
+      padding: 10px calc(var(--gap-l) + var(--container-offset));
+      padding-right: 20px;
+      margin-left: calc(-1 * (var(--gap-l) + var(--container-offset)));
+    }
   }
 }
