--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,12 +1,6 @@
-// @include font-face('Inter', 'Inter-Thin', 100, normal);
-// @include font-face('Inter', 'Inter-ExtraLight', 200, normal);
-// @include font-face('Inter', 'Inter-Light', 300, normal);
-// @include font-face('Inter', 'Inter-Regular', 400, normal);
-// @include font-face('Inter', 'Inter-Medium', 500, normal);
-// @include font-face('Inter', 'Inter-SemiBold', 600, normal);
-// @include font-face('Inter', 'Inter-Bold', 700, normal);
-// @include font-face('Inter', 'Inter-ExtraBold', 800, normal);
-// @include font-face('Inter', 'Inter-Black', 900, normal);
-// @include font-face('StalinistOne', 'StalinistOne-Regular', 400, normal);
 @include font-face('Furore', 'Furore', 400, normal);
+@include font-face('Montserrat', 'Montserrat-Light', 300, normal);
 @include font-face('Montserrat', 'Montserrat-Regular', 400, normal);
+@include font-face('Montserrat', 'Montserrat-Medium', 500, normal);
+@include font-face('Montserrat', 'Montserrat-SemiBold', 600, normal);
+@include font-face('Montserrat', 'Montserrat-Bold', 700, normal);
