--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -19,6 +19,8 @@ body {
   min-height: 100vh;
   min-height: 100dvh;
   text-size-adjust: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -94,6 +96,8 @@ picture {
 }
 
 .btn-row {
+  @extend %flex-wrap;
+  gap: 20px;
   max-width: 600px;
   padding: clamp(20px, 4vw, 40px) 0;
 
