--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -37,3 +37,4 @@
 @import '../pug/sections/services/services-main';
 @import '../pug/sections/services/services-detail';
 @import '../pug/sections/contacts/contacts';
+@import '../pug/sections/fag/fag';
