--- a/src/pug/components/header/header.pug
+++ b/src/pug/components/header/header.pug
@@ -36,7 +36,11 @@ header.header
       +nav({
         links: [
           {
-            href: 'services.html',
+            href: 'company.html',
+            text: 'О компании'
+          },
+          {
+            href: 'services-main.html',
             text: 'Услуги',
             inner: [
               {
