--- a/src/pug/components/nav/_nav.scss
+++ b/src/pug/components/nav/_nav.scss
@@ -53,7 +53,7 @@ $mobile-view-width: 1360px;
         min-width: 260px;
         background-color: var(--site-bg-color);
         box-shadow: 10px 20px 10px rgba(100, 94, 112, 0.3);
-        border: 1px solid var(--primary);
+        // border: 1px solid var(--primary);
         border-radius: 6px;
         transform: translateY(16px);
         transition:
