--- a/src/pug/sections/fag/fag-detail.pug
+++ b/src/pug/sections/fag/fag-detail.pug
@@ -10,7 +10,7 @@ block content
 
       +main-accordeon(questionList)
 
-      .fag__wrapper   
+      .btns-wrapper   
         +main-btn({
           class: 'main-btn--outlined base-section__btn',
           text: 'Связаться с нами',
