--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -38,3 +38,4 @@
 @import '../pug/sections/services/services-detail';
 @import '../pug/sections/contacts/contacts';
 @import '../pug/sections/fag/fag';
+@import '../pug/sections/company/company';
